[tool.poetry]
name = "langchain-server-example"
version = "0.1.0"
description = ""
authors = ["Nuno Campos <nuno@boringbits.io>"]
readme = "README.md"
packages = [{include = "langchain_server_example"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.51"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
openai = "^0.25.0"
google-search-results = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
